--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -28,7 +28,7 @@
     <i class="fa-solid fa-cloud fa-5x"></i>
     </br>
     </br>
-    <form th:action="@{/checkWeather}" method="post">
+    <form th:action="@{/displayWeather}" method="get">
         <div class="mb-3">
         <input class="form-control" type="text" name="cityName" placeholder="Wprowadź nazwę miasta">
         </div>
